--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
       const output = document.getElementById('response');
       output.textContent = "Thinking...";
 
+      const OPENROUTER_API_KEY = "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"; // Replace with your actual key
+
       try {
-        const response = await fetch("https://openrouter.ai/api/v1/chat/completions ", {
+        const response = await fetch(" https://api.allorigins.win/get?url=" + encodeURIComponent(
+          " https://openrouter.ai/api/v1/chat/completions "
+        ), {
           method: "POST",
           headers: {
-            "Authorization": "Bearer sk-or-25922ec0c68a2f5e2af8758e3c80f0107903667ab7beea9bfc32b3f90dde9a43", // ← Replace this with your actual key!
+            "Authorization": "Bearer " + OPENROUTER_API_KEY,
             "Content-Type": "application/json"
           },
           body: JSON.stringify({
@@ -70,11 +74,13 @@
         });
 
         if (!response.ok) {
-          throw new Error(`API Error: ${response.statusText}`);
+          throw new Error(`API returned status ${response.status}`);
         }
 
         const data = await response.json();
-        output.textContent = data.choices?.[0]?.message?.content || JSON.stringify(data, null, 2);
+        const result = JSON.parse(data.contents); // allorigins returns raw response inside "contents"
+
+        output.textContent = result.choices?.[0]?.message?.content || JSON.stringify(result, null, 2);
 
       } catch (error) {
         console.error("Request error:", error);
