--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       output.textContent = "Thinking...";
 
-      const OPENROUTER_API_KEY = "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"; // Replace with your key
+      const OPENROUTER_API_KEY = "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"; // ← Replace with your key
 
       try {
         const response = await fetch("https://api.allorigins.win/get?url=" + encodeURIComponent(
