--- a/index.html
+++ b/index.html
@@ -6,62 +6,57 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #1e1e2f;
-      color: #fff;
+      background: #f4f4f4;
       padding: 2rem;
       max-width: 600px;
       margin: auto;
       text-align: center;
     }
-    .dark-mode {
-      background: #fff;
-      color: #000;
+    h1 {
+      color: #333;
     }
-    textarea, select, button {
-      margin-top: 1rem;
-      padding: 10px;
-      font-size: 1rem;
+    textarea {
       width: 100%;
+      height: 100px;
+      font-size: 1rem;
+      padding: 10px;
+      margin-top: 1rem;
+      box-sizing: border-box;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
     }
     pre {
-      background: #2a2a3d;
+      text-align: left;
+      background: #fff;
       padding: 1rem;
+      margin-top: 1rem;
       border-radius: 5px;
       white-space: pre-wrap;
       word-wrap: break-word;
-      margin-top: 1rem;
-      text-align: left;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
   <h1>🤖 AI Agent Bot</h1>
-  <label for="model">Choose AI Model:</label>
-  <select id="model">
-    <option value="mistralai/mistral-7b-instruct">Mistral 7B</option>
-    <option value="huggingfaceh4/zephyr-7b-beta">Zephyr 7B</option>
-    <option value="meta-llama/llama-3-8b">Llama 3 8B</option>
-  </select>
+  <p>Ask me anything!</p>
 
-  <textarea id="prompt" placeholder="Ask me anything..."></textarea>
-  <button onclick="ask()">Send</button>
-  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  <textarea id="prompt" placeholder="e.g. What is the capital of Kenya?"></textarea><br/>
+  <button onclick="ask()">Ask</button>
 
-  <pre id="response">Type a question and click "Send".</pre>
+  <pre id="response">Type a question and click "Ask".</pre>
 
   <script>
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark-mode");
-    }
-
     async function ask() {
       const input = document.getElementById('prompt').value;
       const output = document.getElementById('response');
-      const selectedModel = document.getElementById('model').value;
-
       output.textContent = "Thinking...";
 
-      const OPENROUTER_API_KEY = "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"; // ← Replace with your key
+      const OPENROUTER_API_KEY = "sk_or-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"; // ← Replace this with your actual key!
 
       try {
         const response = await fetch("https://api.allorigins.win/get?url=" + encodeURIComponent(
@@ -73,7 +68,7 @@
             "Content-Type": "application/json"
           },
           body: JSON.stringify({
-            model: selectedModel,
+            model: "mistralai/mistral-7b-instruct",
             messages: [{ role: "user", content: input }]
           })
         });
